--- a/xbrlapi.yaml
+++ b/xbrlapi.yaml
@@ -245,6 +245,7 @@ paths:
         - $ref: '#/components/parameters/fact.ultimus_Param'
         - $ref: '#/components/parameters/fact.ultimus-index_Param'
         - $ref: '#/components/parameters/fact.value_Param'
+        - $ref: '#/components/parameters/fact.value-link_Param'
         - $ref: '#/components/parameters/member.is-base_Param'
         - $ref: '#/components/parameters/member.local-name_Param'
         - $ref: '#/components/parameters/member.typed-value_Param'
@@ -600,6 +601,7 @@ paths:
         - $ref: '#/components/parameters/fact.ultimus_Param'
         - $ref: '#/components/parameters/fact.ultimus-index_Param'
         - $ref: '#/components/parameters/fact.value_Param'
+        - $ref: '#/components/parameters/fact.value-link_Param'
         - $ref: '#/components/parameters/member.is-base_Param'
         - $ref: '#/components/parameters/member.local-name_Param'
         - $ref: '#/components/parameters/member.typed-value_Param'
@@ -688,6 +690,7 @@ paths:
         - $ref: '#/components/parameters/fact.ultimus-index_Param'
         - $ref: '#/components/parameters/fact.ultimus_Param'
         - $ref: '#/components/parameters/fact.value_Param'
+        - $ref: '#/components/parameters/fact.value-link_Param'
         - $ref: '#/components/parameters/member.is-base_Param'
         - $ref: '#/components/parameters/member.local-name_Param'
         - $ref: '#/components/parameters/member.typed-value_Param'
@@ -2445,6 +2448,7 @@ components:
               ,fact.ultimus
               ,fact.ultimus-index
               ,fact.value
+              ,fact.value-link
               ,fact.xml-id
               ,member.is-base
               ,member.local-name
@@ -2673,6 +2677,7 @@ components:
               ,fact.ultimus
               ,fact.ultimus-index
               ,fact.value
+              ,fact.value-link
               ,fact.xml-id
               ,member.is-base
               ,member.local-name
@@ -2875,6 +2880,8 @@ components:
           $ref: '#/components/schemas/fact_ultimus-index'
         fact.value:
           $ref: '#/components/schemas/fact_value'
+        fact.value-link:
+          $ref: '#/components/schemas/fact_value-link'
         fact.xml-id:
           $ref: '#/components/schemas/fact_xml-id'
         member.is-base:
@@ -3324,6 +3331,8 @@ components:
           $ref: '#/components/schemas/fact_ultimus-index'
         fact.value:
           $ref: '#/components/schemas/fact_value'
+        fact.value-link:
+          $ref: '#/components/schemas/fact_value-link'
         fact.xml-id:
           $ref: '#/components/schemas/fact_xml-id'
         member.is-base:
@@ -3711,6 +3720,9 @@ components:
     fact_value:
       type: string
       description: The value of the fact as a text value. This includes numerical as well as non-numerical values reported.
+    fact_value-link:
+      type: string
+      description: A URL to the rendered fact.value data. For data encoded as HTML (ie. text block disclosures), the URL will display the formatted data excerpted from the full report.
     fact_xml-id:
       type: string
       description: The xml-id included in the filing. Not all facts will have this identifier, as it is dependent ofn the filer adding it. Where it is used (in inline filings, for example), it can be used to locate the fact value in the filing.
@@ -4418,6 +4430,12 @@ components:
        schema:
           type: string
        description: The value of the fact as a text value. This includes numerical as well as non-numerical values reported.
+    fact.value-link_Param:
+       in: query
+       name: fact.value-link
+       schema:
+          type: string
+       description: A URL to the rendered fact.value data. For data encoded as HTML (ie. text block disclosures), the URL will display the formatted data excerpted from the full report.
 
     label.text_Param:
         in: query
