--- a/xbrlapi.yaml
+++ b/xbrlapi.yaml
@@ -1,8 +1,5 @@
 openapi: 3.0.0
 # XBRL API
-servers:
-  - description: Running this application XBRL US server
-    url: 'https://api.xbrl.us/'
 info:
   version: "V1"
   title: XBRL API 
@@ -10,11 +7,11 @@ info:
     #### [Skip to interactive documentation for objects](https://xbrlus.github.io/xbrl-api/#/oauth2) 
     
     ## Introduction
-    The xbrlapi.yaml file noted above defines the free XBRL API used to retrieve data from the [XBRL US Database of Public filings](https://xbrl.us/filings-database). The XBRL API can also work with any database that conforms to the [XBRL 2.1 Specification](https://specifications.xbrl.org/work-product-index-group-base-spec-base-spec.html).
+    The XBRL API can work with any database that conforms to the [XBRL 2.1 Specification](https://specifications.xbrl.org/work-product-index-group-base-spec-base-spec.html). The xbrlapi.yaml file noted above defines the free XBRL API used to retrieve data from the [XBRL US Database of Public filings](https://xbrl.us/filings-database).
 
-    The documentation below describes how to use the XBRL API. To use this page interactively, [generate a client ID and secret](https://xbrl.us/access-token) for your XBRL US Web account. 
+    The documentation below describes how to use the XBRL API. The purpose of the XBRL API is to provide a unified interface to stored XBRL data which any data utility can adopt. This unified interface allows developers with limited XBRL knowledge to learn a single interface to access many data repositories. This expands access to the market for available data, while also encouraging the use of fundamental structured data.
 
-    The purpose of the XBRL API is to provide a unified interface to stored XBRL data which any data utility can adopt. This unified interface allows developers with limited XBRL knowledge to learn a single interface to access many data repositories. This expands access to the market for available data, while also encouraging the use of fundamental structured data.
+    _To use this page interactively_, [generate a client ID and secret](https://xbrl.us/access-token) with your XBRL US Web account, then scroll down and click the **Authorize** button on the right-side of this page, or any of the lock icons. Enter the required details, change the "Client credentials location" to **Request body**, then click "Authorize" and "Close". Once authorized, click any **Try it out** button appearing at the top of any object's Parameters list to form a query and get results.  
 
     ### Structure and Syntax
     The API is structured to allow the return of XBRL details as objects, which are used to classify XBRL data. These objects generally fall into two categories: **facts and data taxonomy**. Each object has multiple properties that can be used to define the query. Some are shared and others are unique to the object. **Objects can also be nested** allowing specific information about the main object to be retrieved.
@@ -107,6 +104,9 @@ info:
   contact:
     name: XBRL US
     email: support@xbrl.us
+servers:
+  - description: Running this application XBRL US server
+    url: 'https://api.xbrl.us/'
 tags:
   - name: oauth2
     description: " -- acquire authorization, receive tokens, and check tokens"
